--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "nodemon app.js"
   },
   "dependencies": {
+    "asnyc": "^0.0.1-security",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongodb": "^4.10.0",
     "mongoose": "^6.6.1",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "vary": "^1.1.2"
   }
 }
