--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project-inventory-application",
   "version": "0.0.0",
   "private": true,
+  "engines": { "node": "v16.15.0" },
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon app.js"
