--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "project-inventory-application",
   "version": "0.0.0",
   "private": true,
-  "engines": { "node": "v16.15.0" },
+  "engines": {
+    "node": "v16.15.0"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon app.js"
   },
   "dependencies": {
-    "asnyc": "^0.0.1-security",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "^3.1.8",
