--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "v16.15.0"
   },
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node app.js",
     "dev": "nodemon app.js"
   },
   "dependencies": {
