Make app public

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-inventory-application",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "engines": {
     "node": "v16.15.0"
   },
